<resources>
    <string name="app_name">Fence Puzzle</string>
    <string name="fence_puzzle_title">Fence Puzzle</string>
    <string name="start_game">Start Game</string>
    <string name="instructions">Instructions</string>
    <string name="options">Options</string>
    <string name="filler_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vehicula odio in velit ultricies feugiat. Pellentesque accumsan congue orci, ac accumsan velit facilisis et. Aenean eget consequat urna, vel vestibulum lectus. Ut maximus rhoncus odio, vel pretium justo vehicula ut. Nam semper lorem in tincidunt varius. Proin varius pretium justo sit amet semper. Fusce semper nisi id nunc lacinia, sed molestie nulla aliquet. Vestibulum accumsan, mi eu iaculis pharetra, felis metus dignissim ipsum, at imperdiet purus nisi eu erat. Curabitur ut erat tempor nibh consequat commodo sit amet et tortor. Integer fermentum libero ut fermentum consectetur. Integer in sollicitudin ligula. Morbi congue consequat dui, vel cursus dui vehicula in. Donec ultricies, sem eu suscipit pretium, lectus lectus suscipit felis, sed sagittis nibh eros in libero. Suspendisse ut risus ante. Nunc finibus posuere massa non pretium.</string>
    <string name="level_selector_title">Level Select</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!--Strings in the Instructions Activity-->
    <string name="instructions_content">
        Simply touch a tile to rotate it 90 degrees clockwise.
        You must rotate each tile so that the fences connect into a single, continuous enclosure to solve the puzzle.
    </string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
