<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/LevelSelectText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/level_selector_title"
        android:textSize="30sp"
        android:paddingTop="30dp"
        android:paddingBottom="60dp"/>

    <TextView
        android:id="@+id/EasyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/easy"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/LevelSelectText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/EasyButtons"
        android:layout_width="match_parent"
        app:layout_heightPercent="12%"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@+id/EasyText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/easy_1"
            android:layout_marginRight="5dp"
            app:layout_widthPercent="15%"
            app:layout_heightPercent="85%"
            android:text="1"
            android:textSize="18sp"
            android:onClick="selectLevelOne">
        </Button>
        <Button
            android:id="@+id/easy_2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@id/easy_1"
            app:layout_widthPercent="15%"
            app:layout_heightPercent="85%"
            android:text="2"
            android:textSize="18sp"
            android:onClick="selectLevelOne">
        </Button>
        <Button
            android:id="@+id/easy_3"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@id/easy_2"
            app:layout_widthPercent="15%"
            app:layout_heightPercent="85%"
            android:text="3"
            android:textSize="18sp"
            android:onClick="selectLevelOne">
        </Button>
        <Button
            android:id="@+id/easy_4"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/easy_3"
            app:layout_widthPercent="15%"
            app:layout_heightPercent="85%"
            android:text="4"
            android:textSize="18sp"
            android:onClick="selectLevelOne">
        </Button>
    </android.support.percent.PercentRelativeLayout>

    <TextView
        android:id="@+id/MediumText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/medium"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/EasyButtons"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/MediumButtons"
        android:layout_width="match_parent"
        app:layout_heightPercent="12%"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@+id/MediumText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/medium_1"
            android:layout_marginRight="5dp"
            app:layout_widthPercent="15%"
            app:layout_heightPercent="85%"
            android:text="5"
            android:textSize="18sp"
            android:onClick="selectLevelOne">
        </Button>
        <Button
            android:id="@+id/medium_2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@id/medium_1"
            app:layout_widthPercent="15%"
            app:layout_heightPercent="85%"
            android:text="6"
            android:textSize="18sp"
            android:onClick="selectLevelOne">
        </Button>
        <Button
            android:id="@+id/medium_3"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@id/medium_2"
            app:layout_widthPercent="15%"
            app:layout_heightPercent="85%"
            android:text="7"
            android:textSize="18sp"
            android:onClick="selectLevelOne">
        </Button>
        <Button
            android:id="@+id/medium_4"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/medium_3"
            app:layout_widthPercent="15%"
            app:layout_heightPercent="85%"
            android:text="8"
            android:textSize="18sp"
            android:onClick="selectLevelOne">
        </Button>
    </android.support.percent.PercentRelativeLayout>

    <TextView
        android:id="@+id/HardText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:gravity="center"
        android:text="@string/hard"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/MediumButtons"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/HardButtons"
        android:layout_width="match_parent"
        app:layout_heightPercent="12%"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@+id/HardText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/hard_1"
            android:layout_marginRight="5dp"
            app:layout_widthPercent="15%"
            app:layout_heightPercent="85%"
            android:text="9"
            android:textSize="18sp"
            android:onClick="selectLevelOne">
        </Button>
        <Button
            android:id="@+id/hard_2"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@id/hard_1"
            app:layout_widthPercent="15%"
            app:layout_heightPercent="85%"
            android:text="10"
            android:textSize="16sp"
            android:onClick="selectLevelOne">
        </Button>
        <Button
            android:id="@+id/hard_3"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@id/hard_2"
            app:layout_widthPercent="15%"
            app:layout_heightPercent="85%"
            android:text="11"
            android:textSize="16sp"
            android:onClick="selectLevelOne">
        </Button>
        <Button
            android:id="@+id/hard_4"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/hard_3"
            app:layout_widthPercent="15%"
            app:layout_heightPercent="85%"
            android:text="12"
            android:textSize="16sp"
            android:onClick="selectLevelOne">
        </Button>
    </android.support.percent.PercentRelativeLayout>

</android.support.percent.PercentRelativeLayout>
